# kid-splitter

./: .gitignore
Kid's Class Scheduler UI/design_handoff_class_scheduler/: Kid s.dc.html  README.md  design.md
backend/: .env.example  Agents.md  Context.md  README.md  pyproject.toml  status.md
backend/.claude/: settings.local.json
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_unary_constraint_tag.py
backend/app/: db.py  dependencies.py  main.py
backend/app/models/: cohort.py  constraint.py  solution.py  student.py  teacher.py
backend/app/routers/: auth.py  cohorts.py  constraints.py  share.py  solve.py  students.py
backend/app/schemas/: auth.py  cohort.py  constraint.py  share.py  solve.py  student.py
backend/app/services/: csv_import.py  solver.py  validator.py
backend/docs/: 00_shared_context.md  01_auth.md  02_cohorts.md  03_students.md  04_constraints.md  05_solver.md  06_share.md
frontend/: index.html  package-lock.json  package.json
frontend/docs/: 01-auth.md  02-cohort-management.md  03-student-import.md  04-constraint-editor.md  05-solve-configuration.md  06-solution-comparison.md  07-solution-detail.md  08-share.md
frontend/src/: App.tsx  index.css
frontend/src/components/: AddStudentForm.tsx  CsvUpload.tsx  Nav.tsx  ProtectedRoute.tsx  ShareModal.tsx  SizeDistributionChart.tsx  StudentTable.tsx  Toast.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/lib/: api.ts  types.ts
frontend/src/pages/: CohortDashboardPage.tsx  CohortDetailPage.tsx  ConstraintEditorTab.tsx  LoginPage.tsx  (+5 more)
